# AlexN34

./: .gitignore  2018_01_01_test.html  CNAME  Makefile  README.md  archives.html  authors.html  blog.html  categories.html  home.html  index.html  new-year's-post.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  resume.html  tags.html
author/: alex-nguyen.html
blog/2018/: androidvision.html  docker-cheatsheet.html  docker-compose.html  learning-ansible.html  new-year's-post.html  new-years-post.html
category/: ansible.html  articles.html  blog.html  cheatsheets.html  creation.html  docker-cheatsheet.html  misc.html  mobile.html  other.html  posts.html
content/blog/: androidocr.md  ansible.md  docker-cheatsheet.md  docker-compose-cheatsheet.md  new-years-post.md
content/pages/: about.md  blog.md  index.md  resume.md
feeds/: all.atom.xml  ansible.atom.xml  articles.atom.xml  blog.atom.xml  cheatsheets.atom.xml  creation.atom.xml  docker-cheatsheet.atom.xml  misc.atom.xml  mobile.atom.xml  other.atom.xml  posts.atom.xml
output/: archives.html  authors.html  index.html  tags.html
output/feeds/: all.atom.xml
output/pages/: about.html  blog.html  home.html  index.html  my-super-post.html  my-super-post2.html  resume.html
pages/: about.html  blog.html  index.html  my-super-post.html  my-super-post2.html  resume.html
scripts/: make_entry.py
tag/: android.html  ansible.html  apps.html  blog.html  cheatsheets.html  compose.html  devops.html  docker.html  mobile.html  ocr.html  other.html  pelican.html  test.html
(+2 files in other folders)
