[tool.poetry]
name = "blog"
version = "0.1.0"
description = "source for alexn34's blog"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blinker = "==1.4"
pelican = "==3.7.1"
astroid = "==1.6.0"
beautifulsoup4 = "==4.6.0"
docutils = "==0.14"
feedgenerator = "==1.9"
flake8 = "==3.5.0"
ghp-import = "==0.5.5"
isort = "==4.2.15"
jedi = "==0.11.1"
Jinja2 = "==2.10"
lazy-object-proxy = "==1.3.1"
Markdown = "==2.6.10"
MarkupSafe = "==1.0"
mccabe = "==0.6.1"
parso = "==0.1.1"
pycodestyle = "==2.3.1"
pyflakes = "==1.6.0"
Pygments = "==2.2.0"
pylint = "==1.8.1"
python-dateutil = "==2.6.1"
pytz = "==2017.3"
service-factory = "==0.1.5"
six = "==1.11.0"
Unidecode = "==0.4.21"
Wand = "==0.4.4"
wrapt = "==1.10.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
